Added Modals for controls Used Dummy Data to test

--- a/frontend/src/pages/Dashboard/Dashboard.css
+++ b/frontend/src/pages/Dashboard/Dashboard.css
@@ -25,6 +25,11 @@ html, body, #root{
 .value .units, .more{
     display: none;
 }
+
+.bed-number{
+    width: 30px;
+    height: 30px;
+}
 /* .monitor{
     height: 250px;
 } */
