Registration Page Added

--- a/frontend/src/pages/Dashboard/Dashboard.css
+++ b/frontend/src/pages/Dashboard/Dashboard.css
@@ -13,6 +13,14 @@ html, body, #root{
     margin-left: 10px;
 }
 
+.avater{
+    width: 40px;
+    height: 40px;
+    border: 1px white solid;
+    border-radius: 50%;
+}
+
+
 
 .sidebar, footer{
     border-top: 1px solid #bbb;
